# marker_calib

./: .gitignore  CMakeLists.txt  PSO_marker_extric_estimate.c  PSO_marker_extric_estimate.h  PSO_marker_extric_estimate_data.c  PSO_marker_extric_estimate_data.h  PSO_marker_extric_estimate_emxAPI.c  PSO_marker_extric_estimate_emxAPI.h  PSO_marker_extric_estimate_emxutil.c  PSO_marker_extric_estimate_emxutil.h  PSO_marker_extric_estimate_initialize.c  PSO_marker_extric_estimate_initialize.h  PSO_marker_extric_estimate_rtw.bat  PSO_marker_extric_estimate_rtw.mk  PSO_marker_extric_estimate_rtw.rsp  PSO_marker_extric_estimate_rtw_comp.rsp  PSO_marker_extric_estimate_terminate.c  PSO_marker_extric_estimate_terminate.h  PSO_marker_extric_estimate_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  compute_fit_error_pso.c  compute_fit_error_pso.h  eml_rand_mt19937ar_stateful.c  eml_rand_mt19937ar_stateful.h  gcGuiReport.mat  ixfun.c  ixfun.h  make_exception.mat  minOrMax.c  minOrMax.h  rand.c  rand.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  (+3 more)
datasets/: fit_data.txt  fit_data2.txt  fit_data3.txt  fit_data4.txt
examples/: main.c  main.h
html/: report.mldatx
interface/: _coder_PSO_marker_extric_estimate_api.c  _coder_PSO_marker_extric_estimate_api.h  _coder_PSO_marker_extric_estimate_info.c  _coder_PSO_marker_extric_estimate_info.h  _coder_PSO_marker_extric_estimate_mex.c  _coder_PSO_marker_extric_estimate_mex.h
